
[package]
edition = "2021"
name = "inperiod"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["MeiHui FAN <mhfan@ustc.edu>"]
homepage = "https://mhfan.github.io/inperiod"
categories  = ["Web programming", "WebAssembly"]
description = "Modern fancy interactive online periodic table of chemistry elements"
keywords = ["periodic", "periodic table", "elements", "chemistry elements", "dioxus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["web"], optional = true } # "web", "fullstack", "router"
#dioxus-sdk = { version = "0.5", features = ["i18n"] }
#dioxus-logger = "0.5"   # Debug
#manganis = "0.2"

#mendeleev = "0.8"

reqwest = { version = "0.12", features = ["blocking"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
scraper = { version = "0.21", optional = true }
csv = { version = "1.3", optional = true }

[features]
default = []
syncdep = ["reqwest", "serde", "serde_json", "scraper", "csv"]

desktop = ["dioxus/desktop"]
server  = ["dioxus/axum"]
web = ["dioxus/web"]

[[bin]]
name = "inperiod"
required-features = ["dioxus"]

[[bin]]
name = "syncd"
path = "src/syncd.rs"   # default in src/bin/
required-features = ["syncdep"]

[profile.dev]
opt-level = 1
#incremental = false

#[profile.dev.package."*"]
#opt-level = 3

[profile.release]
codegen-units = 1
strip = true # "debuginfo"
opt-level = "z" # "s"
panic = 'abort'
lto = true
#debug = false
#incremental = false

[workspace]

