
[package]
edition = "2021"
name = "inperiod"
version = "0.1.6"
license = "MIT OR Apache-2.0"
authors = ["MeiHui FAN <mhfan@ustc.edu>"]
homepage = "https://mhfan.github.io/inperiod"
repository = "https://github.com/mhfan/inperiod"
categories = ["science", "web-programming", "wasm"]
description = "Modern fancy interactive online periodic table of chemistry elements"
keywords = ["periodic", "periodic-table", "elements", "chemistry-elements", "dioxus"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", optional = true }   # features = ["fullstack", "router"],
#dioxus-sdk = { version = "0.6", features = ["i18n"], optional = true }
#tracing = "0.1"

reqwest = { version = "0.12", optional = true } # features = ["blocking"], #, "json"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
scraper = { version = "0.22", optional = true }
csv = { version = "1.3", optional = true }

[features]
default = ["web"]    # XXX: "syncdep" not work with "dioxus"
syncdep = ["reqwest", "tokio", "serde", "serde_json", "scraper", "csv"]

desktop = ["dioxus/desktop"]
mobile  = ["dioxus/mobile"]
web     = ["dioxus/web"]

[[bin]]
name = "inperiod"
required-features = ["dioxus"]

[[bin]]
name = "syncd"
path = "src/syncd.rs"   # default in src/bin/
required-features = ["syncdep"]

[profile.release]
codegen-units = 1
strip = true # "debuginfo"
opt-level = "z" # "s"
panic = 'abort'
lto = true
#debug = false
#incremental = false

[profile.dev]
opt-level = 1
#incremental = false

#[profile.dev.package."*"]
#opt-level = 3

[profile.wasm-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace]

